--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO list
 
 - Bootstrap templates
-- piechart labels
-- sliders labels
+- Scaling svg's!!
+- on-click event linegraph
+- cleaning code! Multiple js, css files
